<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding='16dp'>

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/weatherDesc" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/weatherIcon"
            android:text="@string/date"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/weatherIcon"
            android:text="@string/temp_max"
            android:textColor="#a9a9a9"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/date"
            android:text="@string/temp_min"
            android:textColor="#a9a9a9"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/weatherDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/maxTemp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/weatherIcon"
            android:text="@string/weatherDesc"
            android:textColor="#a9a9a9"
            android:textSize="18sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>